2019-06-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* .dir-locals.el: new file.

	* eev-elinks.el (find-code-pdf-links): new function.

2019-05-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-efunction-links): added an `eek' link.
	(find-evariable-links): added an ``eek' link.

2019-05-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-here-links-3): new function.
	(find-here-links-beginner): small changes.

	* eev-intro.el: small changes.

2019-05-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-dhmake-links): deleted.
	(find-newhost-links): deleted.

2019-05-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-ekey-links): added some spaces in the
	output.

2019-05-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rcirc.el (find-freenode-links): added some text.

2019-04-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-emacs-keys-intro): point to
	(find-refining-intro).

	* eev-elinks.el (find-here-links-beginner): new function.

2019-04-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-mode.el (eev-mode-map-set): new keybinding: `M-h M-w' for
	`ee-copy-this-line-to-kill-ring'.

	* eev-edit.el (ee-copy-this-line-to-kill-ring): new function.

	* eev-intro.el (find-refining-intro): new function.

2019-04-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rcirc.el (eepitch-freenode): new function.

2019-04-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-install-intro): small changes.

	* eev.el: small changes.

	* eev-intro.el (find-rcirc-intro): rewrote completely.
	(find-escripts-intro): small changes.

	* eev-rcirc.el: rewrote all comments and some docstrings.
	(ee-irc-channel-around-point): commented out.
	(ee-buffer-freenode-channel-name): commented out.
	(find-freenode-links): small changes.

2019-04-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eval-intro): new sections: "10.1.
	Byte-compiled functions", "10.2. How `find-efunction' works", and